<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:background="?attr/customBackground"
    tools:context=".ui.HomeFragment">

    <!-- Placeholder layout for locking screen-->
    <FrameLayout
        android:id="@+id/lock"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:contentDescription="@string/lock_layout_description" />

    <!-- Clock and calendar-->
    <LinearLayout
        android:id="@+id/dateTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextClock
            android:id="@+id/clock"
            style="@style/TextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:format12Hour="h:mm"
            android:textSize="@dimen/time_size"
            android:textAlignment="center"
            tools:text="02:34" />

        <TextView
            android:id="@+id/date"
            style="@style/TextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:format12Hour="EEE, dd MMM"
            android:format24Hour="EEE, dd MMM"
            android:textAlignment="center"
            android:paddingHorizontal="2dp"
            android:textSize="@dimen/date_size"
            tools:text="Mon, 01 Jan" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ownerName"
            android:text=""
            style="@style/TextDefault"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/homeAppsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingVertical="@dimen/home_app_padding_vertical">

            <TextView
                android:id="@+id/homeApp1"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app"
                android:paddingVertical="@dimen/home_app_padding_vertical"
                android:tag="@string/_1"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/homeApp2"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app"
                android:paddingVertical="@dimen/home_app_padding_vertical"
                android:tag="@string/_2"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/homeApp3"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app"
                android:paddingVertical="@dimen/home_app_padding_vertical"
                android:tag="@string/_3"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/homeApp4"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app"
                android:paddingVertical="@dimen/home_app_padding_vertical"
                android:tag="@string/_4"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/homeApp5"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app"
                android:paddingVertical="@dimen/home_app_padding_vertical"
                android:tag="@string/_5"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/homeApp6"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app"
                android:paddingVertical="@dimen/home_app_padding_vertical"
                android:tag="@string/_6"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/homeApp7"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app"
                android:paddingVertical="@dimen/home_app_padding_vertical"
                android:tag="@string/_7"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/homeApp8"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app"
                android:paddingVertical="@dimen/home_app_padding_vertical"
                android:tag="@string/_8"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/homeApp9"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app"
                android:paddingVertical="@dimen/home_app_padding_vertical"
                android:tag="@string/_9"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/homeApp10"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app"
                android:paddingVertical="@dimen/home_app_padding_vertical"
                android:tag="@string/_10"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/homeApp11"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app"
                android:paddingVertical="@dimen/home_app_padding_vertical"
                android:tag="@string/_11"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/homeApp12"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app"
                android:paddingVertical="@dimen/home_app_padding_vertical"
                android:tag="@string/_12"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/homeApp13"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app"
                android:paddingVertical="@dimen/home_app_padding_vertical"
                android:tag="@string/_13"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/homeApp14"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app"
                android:paddingVertical="@dimen/home_app_padding_vertical"
                android:tag="@string/_14"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/homeApp15"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app"
                android:paddingVertical="@dimen/home_app_padding_vertical"
                android:tag="@string/_15"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/homeApp16"
                style="@style/TextLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app"
                android:paddingVertical="@dimen/home_app_padding_vertical"
                android:tag="@string/_16"
                tools:visibility="visible" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/firstRunTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="56dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            style="@style/TextSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/swipe_up_for_apps" />

        <TextView
            style="@style/TextSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_press_for_settings" />

    </LinearLayout>

    <!-- Set default launcher -->
    <TextView
        android:id="@+id/setDefaultLauncher"
        style="@style/TextSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="56dp"
        android:text="@string/set_as_default_launcher"
        android:visibility="gone" />
</FrameLayout>